// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/copyInput should render with all props 1`] = `
<div
  className="copy-input"
>
  <label
    className="copy-title"
    htmlFor="copy-input"
  >
    t
  </label>
  <input
    defaultValue="v"
    id="copy-input"
    onFocus={[Function]}
    placeholder="Just copy it"
    type="text"
  />
  <button
    aria-label="Copy to clipboard"
    className="cc-button cc-button-tertiary"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fa fa-clipboard"
    />
  </button>
</div>
`;

exports[`components/copyInput should render without props 1`] = `
<div
  className="copy-input"
>
  <input
    id="copy-input"
    onFocus={[Function]}
    placeholder="Just copy it"
    type="text"
  />
  <button
    aria-label="Copy to clipboard"
    className="cc-button cc-button-tertiary"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fa fa-clipboard"
    />
  </button>
</div>
`;

exports[`components/copyInput should render without title 1`] = `
<div
  className="copy-input"
>
  <input
    defaultValue="v"
    id="copy-input"
    onFocus={[Function]}
    placeholder="Just copy it"
    type="text"
  />
  <button
    aria-label="Copy to clipboard"
    className="cc-button cc-button-tertiary"
    onClick={[Function]}
    type="button"
  >
    <i
      className="fa fa-clipboard"
    />
  </button>
</div>
`;
